# hephaestus

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
examples/: aspect_log.rs  aspect_mode.rs  aspect_sqrt.rs  bspline.rs  chord_diagram.rs  closed_shape_markers.rs  composition_demo.rs  ellipse.rs  endpoint_arrows.rs  facet_strips.rs  faceted.rs  font_registration.rs  geometry.rs  glyph_markers.rs  google_fonts.rs  hello.rs  layout_demo.rs  legends.rs  line.rs  locale_de.rs  log_scale.rs  nesting_asymmetric.rs  nesting_chrome_coupling.rs  nesting_deep.rs  nesting_faceted_title.rs  nesting_fixed_aspect.rs  nesting_outer_chrome_propagates.rs  point.rs  polar.rs  polar_nested.rs  polygon.rs  polygon_features.rs  polyline_features.rs  polyline_markers.rs  primitives_demo.rs  projection_custom.rs  radar.rs  rect.rs  ribbon_bspline.rs  ribbon_geom.rs  (+20 more)
src/: CLAUDE.md  blend.rs  brush.rs  color.rs  geometry.rs  lib.rs  mesh.rs  path.rs  pick.rs  png.rs  shape.rs  stroke.rs
src/backend/: CLAUDE.md  mod.rs
src/backend/vello/: CLAUDE.md  convert.rs  mod.rs
src/composition/: CLAUDE.md  anatomy.rs  build.rs  mod.rs
src/layout/: CLAUDE.md  mod.rs  solver.rs
src/plot/: CLAUDE.md  composition.rs  diff.rs  mod.rs  plot.rs  projection.rs  scale.rs  value.rs
src/plot/chrome/: axis.rs  legend.rs  linear_axis.rs  mod.rs  panel.rs  polar.rs  strip.rs
src/plot/chrome/legend/: mod.rs  render_keys.rs
src/plot/geom/: CLAUDE.md  bspline.rs  bspline_eval.rs  ellipse.rs  geometry.rs  line.rs  linetype.rs  marks.rs  mod.rs  outline.rs  point.rs  polygon.rs  rect.rs  resolve.rs  ribbon.rs  ribbon_bspline.rs  segment.rs  state.rs  text.rs  text_fit.rs  text_path.rs  wedge.rs
src/plot/scale/: CLAUDE.md  axis.rs  breaks.rs  chrome.rs  constructors.rs  input.rs  legend.rs  mod.rs  output.rs  scale_type.rs  transform.rs
src/plot/theme/: CLAUDE.md  axis.rs  builtin.rs  cascade.rs  element.rs  font.rs  geom.rs  legend.rs  length.rs  mod.rs  palette.rs  tests.rs  theme.rs
src/primitives/: CLAUDE.md  arc_length.rs  clip.rs  corner.rs  end_clip.rs  mod.rs  offset.rs  path_corner.rs  ribbon.rs
src/scales/: CLAUDE.md  breaks.rs  chrome.rs  geometry.rs  input.rs  interop_chrono.rs  interop_jiff.rs  interop_time.rs  locale.rs  mod.rs  output.rs  scale_type.rs  transform.rs  value.rs
src/scales/geometry/: geojson.rs  wkb.rs  wkt.rs
src/scene/: CLAUDE.md  mod.rs  recording.rs
src/text/: CLAUDE.md  google_fonts.rs  mod.rs
tests/: geometry_geom.rs  mesh.rs  picking.rs  projection_custom.rs  smoke.rs  texture_smoke.rs  theme_render.rs
