[package]
name = "hephaestus"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
description = "Backend-agnostic 2D scene renderer for data visualization."
license = "MIT"
repository = "https://github.com/thomasp85/hephaestus"
publish = false

[features]
default = ["vello", "png"]
vello = ["dep:vello", "dep:wgpu", "dep:pollster", "dep:futures-intrusive", "dep:bytemuck"]
png = ["dep:png"]
# Scaffolding text shaping/layout via parley. Off by default — the host crate
# is intended to bring its own shaper. See `src/text/`.
text = ["dep:parley"]
# Placeholders for future backends — wired through cargo but not implemented yet.
blend2d = []
svg = []
pdf = []

[dependencies]
kurbo = "0.13"
peniko = "0.6"
thiserror = "2"

vello = { version = "0.9", optional = true }
wgpu = { version = "29", optional = true }
pollster = { version = "0.4", optional = true }
futures-intrusive = { version = "0.5", optional = true }
png = { version = "0.18", optional = true }
bytemuck = { version = "1", optional = true }
parley = { version = "0.9", optional = true }
clipper2-rust = "1.0.3"

[[example]]
name = "hello"
required-features = ["vello", "png"]

[[example]]
name = "layout_demo"
required-features = ["vello", "png"]

[[example]]
name = "composition_demo"
required-features = ["vello", "png", "text"]

[[example]]
name = "shapes_demo"
required-features = ["vello", "png"]

[[example]]
name = "primitives_demo"
required-features = ["vello", "png"]

[[example]]
name = "point"
required-features = ["vello", "png"]

[[example]]
name = "faceted"
required-features = ["vello", "png"]

[[example]]
name = "line"
required-features = ["vello", "png"]

[[example]]
name = "rect"
required-features = ["vello", "png"]

[[example]]
name = "segment"
required-features = ["vello", "png"]

[[example]]
name = "polygon"
required-features = ["vello", "png"]

[[example]]
name = "ellipse"
required-features = ["vello", "png"]

[[example]]
name = "wedge"
required-features = ["vello", "png"]

[[example]]
name = "text_geom"
required-features = ["vello", "png", "text"]

[[example]]
name = "polyline_features"
required-features = ["vello", "png", "text"]

[[example]]
name = "polygon_features"
required-features = ["vello", "png", "text"]

[[test]]
name = "smoke"
required-features = ["vello"]

[[test]]
name = "picking"
required-features = ["vello"]
