[package]
name = "hephaestus"
version = "0.0.1"
edition = "2021"
rust-version = "1.88"
description = "Backend-agnostic 2D scene renderer for data visualization."
license = "MIT"
repository = "https://github.com/thomasp85/hephaestus"
publish = false

[features]
default = ["vello", "png"]
vello = ["dep:vello", "dep:wgpu", "dep:pollster", "dep:futures-intrusive", "dep:bytemuck"]
png = ["dep:png"]
# Scaffolding text shaping/layout via parley. Off by default — the host crate
# is intended to bring its own shaper. See `src/text/`.
text = ["dep:parley"]
# Optional datetime-library interop: `From` impls between our temporal
# newtypes (`Date` / `DateTime` / `Time` / `Duration`) and the matching
# types in the named library. All three default off — pick whichever
# matches your downstream code's choice (or none, and convert by hand).
# See `src/scales/value/interop_*.rs`.
chrono = ["dep:chrono"]
time = ["dep:time"]
jiff = ["dep:jiff"]
# Spatial-geometry parsers for `crate::scales::Geometry`. Each gate
# enables one input format; all three are hand-rolled with no extra deps,
# so toggling them affects only what `Geometry::from_*` constructors
# compile.
geom-wkt = []
geom-wkb = []
geom-geojson = []
# Placeholders for future backends — wired through cargo but not implemented yet.
blend2d = []
svg = []
pdf = []

[dependencies]
kurbo = "0.13"
peniko = "0.6"
thiserror = "2"

vello = { version = "0.9", optional = true }
wgpu = { version = "29", optional = true }
pollster = { version = "0.4", optional = true }
futures-intrusive = { version = "0.5", optional = true }
png = { version = "0.18", optional = true }
bytemuck = { version = "1", optional = true }
parley = { version = "0.9", optional = true }
clipper2-rust = "1.0.3"

# Optional datetime-library interop (one of three feature gates).
chrono = { version = "0.4", default-features = false, optional = true }
time = { version = "0.3", default-features = false, optional = true }
jiff = { version = "0.2", default-features = false, optional = true }

[[example]]
name = "hello"
required-features = ["vello", "png"]

[[example]]
name = "layout_demo"
required-features = ["vello", "png"]

[[example]]
name = "composition_demo"
required-features = ["vello", "png", "text"]

[[example]]
name = "nesting_asymmetric"
required-features = ["vello", "png", "text"]

[[example]]
name = "nesting_chrome_coupling"
required-features = ["vello", "png", "text"]

[[example]]
name = "nesting_outer_chrome_propagates"
required-features = ["vello", "png", "text"]

[[example]]
name = "nesting_faceted_title"
required-features = ["vello", "png", "text"]

[[example]]
name = "nesting_deep"
required-features = ["vello", "png", "text"]

[[example]]
name = "nesting_fixed_aspect"
required-features = ["vello", "png", "text"]

[[example]]
name = "shapes_demo"
required-features = ["vello", "png"]

[[example]]
name = "primitives_demo"
required-features = ["vello", "png"]

[[example]]
name = "point"
required-features = ["vello", "png"]

[[example]]
name = "faceted"
required-features = ["vello", "png"]

[[example]]
name = "line"
required-features = ["vello", "png"]

[[example]]
name = "rect"
required-features = ["vello", "png"]

[[example]]
name = "segment"
required-features = ["vello", "png"]

[[example]]
name = "polygon"
required-features = ["vello", "png"]

[[example]]
name = "geometry"
required-features = ["vello", "png"]

[[example]]
name = "projection_custom"
required-features = ["vello", "png", "text"]

[[example]]
name = "ellipse"
required-features = ["vello", "png"]

[[example]]
name = "wedge"
required-features = ["vello", "png"]

[[example]]
name = "text_geom"
required-features = ["vello", "png", "text"]

[[example]]
name = "polyline_features"
required-features = ["vello", "png", "text"]

[[example]]
name = "polyline_markers"
required-features = ["vello", "png"]

[[example]]
name = "closed_shape_markers"
required-features = ["vello", "png"]

[[example]]
name = "ribbon_gradient"
required-features = ["vello", "png"]

[[example]]
name = "ribbon_line_polar"
required-features = ["vello", "png", "text"]

[[example]]
name = "ribbon_geom"
required-features = ["vello", "png", "text"]

[[example]]
name = "bspline"
required-features = ["vello", "png", "text"]

[[example]]
name = "ribbon_bspline"
required-features = ["vello", "png", "text"]

[[example]]
name = "chord_diagram"
required-features = ["vello", "png"]

[[example]]
name = "endpoint_arrows"
required-features = ["vello", "png"]

[[example]]
name = "polygon_features"
required-features = ["vello", "png", "text"]

[[example]]
name = "rotation"
required-features = ["vello", "png", "text"]

[[example]]
name = "text_fit"
required-features = ["vello", "png", "text"]

[[example]]
name = "text_path"
required-features = ["vello", "png", "text"]

[[example]]
name = "glyph_markers"
required-features = ["vello", "png", "text"]

[[example]]
name = "log_scale"
required-features = ["vello", "png", "text"]

[[example]]
name = "temporal"
required-features = ["vello", "png", "text"]

[[example]]
name = "polar"
required-features = ["vello", "png", "text"]

[[example]]
name = "radar"
required-features = ["vello", "png", "text"]

[[example]]
name = "polar_nested"
required-features = ["vello", "png", "text"]

[[example]]
name = "legends"
required-features = ["vello", "png", "text"]

[[example]]
name = "theme_dark"
required-features = ["vello", "png", "text"]

[[example]]
name = "theme_brand"
required-features = ["vello", "png", "text"]

[[example]]
name = "theme_blank"
required-features = ["vello", "png", "text"]

[[example]]
name = "theme_legend_variants"
required-features = ["vello", "png", "text"]

[[example]]
name = "theme_geom_defaults"
required-features = ["vello", "png", "text"]

[[example]]
name = "theme_plot_background"
required-features = ["vello", "png", "text"]

[[example]]
name = "theme_axis_title_inside"
required-features = ["vello", "png", "text"]

[[example]]
name = "theme_polar_corner_radius"
required-features = ["vello", "png", "text"]

[[example]]
name = "theme_text_align_to"
required-features = ["vello", "png", "text"]

[[example]]
name = "facet_strips"
required-features = ["vello", "png", "text"]

[[example]]
name = "locale_de"
required-features = ["vello", "png", "text"]

[[test]]
name = "smoke"
required-features = ["vello"]

[[test]]
name = "texture_smoke"
required-features = ["vello"]

[[test]]
name = "mesh"
required-features = ["vello"]

[[test]]
name = "picking"
required-features = ["vello"]

[[test]]
name = "theme_render"
required-features = ["text"]

[[test]]
name = "geometry_geom"
required-features = ["vello"]

[[test]]
name = "projection_custom"
required-features = ["vello", "text"]
